# cache_monitor_for_BJTU_CA

./: .gitignore  CMakeLists.txt  README.md
access_list_gen/: CMakeLists.txt
access_list_gen/sh_src/: .gitignore  array_add.c  array_add_memory_trace_lackey.txt  gen.sh  mat_mut.c
access_list_gen/src/: main.cpp
cache_monitor/: CMakeLists.txt
cache_monitor/src/: cache_monitor.cpp  cache_monitor.hpp  main.cpp
demo/: array_add_mtrace.txt  array_add_res.csv  mat_mut_res.csv  stride131.txt  stride131_res.csv  stride132.txt  stride132_res.csv
